fixed bug about the horizontal scrolling of itemMenu

--- a/ToMovier/src/components/style/ItemMenu.css
+++ b/ToMovier/src/components/style/ItemMenu.css
@@ -17,6 +17,7 @@
         align-items: center;
         padding: 1rem;
         border-radius: 1rem;
+        overflow-x: hidden;
     }
 
     #item-container2{
@@ -178,6 +179,7 @@
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        overflow-x: hidden;
     }
 
     #item-container2{
